# rust-plot

./: .gitignore  .pnp.js  Cargo.toml  README.md  package-lock.json  package.json  test.html  webpack.config.js
.cargo/: _config
src/: _main.rs  _script.ts  main.rs  main3.rs  script.js  script.ts  style.css
