[package]
name = "rust-webview-test"
version = "0.1.0"
authors = ["danchitnis <danchitnis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
web-view = { version = "=0.6.2", features = ["edge"] }
